# MilkDrop3

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOY.md  GEMINI.md  GPT.md  HANDOFF.md  IDEAS.md  MEMORY.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SUBMODULE_DASHBOARD.md  TODO.md  VISION.md  copilot-instructions.md  pyproject.toml
.github/workflows/: ecosystem-test.yml  workspace-ci.yml
docs/: UNIVERSAL_LLM_INSTRUCTIONS.md
logs/: session_state.json  workspace_memory.json
logs/handoffs/: HANDOFF_v2.0.0_20260520_034004.md  HANDOFF_v2.1.0_20260520_060143.md  HANDOFF_v2.2.0_20260520_071920.md  HANDOFF_v2.3.1_20260520_090912.md  HANDOFF_v2.5.1_20260520_182729.md  HANDOFF_v2.6.0_20260520_230354.md  HANDOFF_v3.0.0_20260521_140027.md
scripts/: archive_handoff.py  check_health.py  generate_dashboard.py  generate_project_structure.py  test_ecosystem.py  update_repos_v5.py  workspace_cli.py  workspace_log.py  workspace_monitor.py  workspace_run.py  workspace_session.py  workspace_version.py
src/workspace/: __init__.py  archive_handoff.py  check_health.py  generate_dashboard.py  prune_broken_submodules.py  session_orchestrator.py  test_ecosystem.py  update_repos_v5.py  web_dashboard.py  workspace_monitor.py  workspace_run.py  workspace_session.py
src/workspace/core/: healer.py  hypercode.py  memory.py  shared_memory.py  workspace_version.py
src/workspace/documentation/: archive_handoff.py  generate_dashboard.py
src/workspace/execution/: __init__.py  build.py  search.py  test_ecosystem.py  workspace_run.py
src/workspace/ui/: web_dashboard.py  (+2 more)
(+5 files in other folders)
